# subscriber

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  audit.toml  example.env
.cargo/: config.toml
.github/workflows/: cargo-audit.yml  deploy-docker.yml  deplyo-docker.yml  rust-lint.yml
entity/: Cargo.toml  ReadMe.md
entity/src/: lib.rs
entity/src/entities/: email_subscriber.rs  mod.rs  prelude.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250221_120545_subscriber.rs
src/: app_state.rs  config.rs  db_setup.rs  main.rs  utility.rs
src/routes/: mod.rs  subscribe.rs
static/: waitlist.html
